--- a/mvc/src/main/resources/application.yml
+++ b/mvc/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 80
+  port: 8080
 
 spring:
   h2:
@@ -20,3 +20,12 @@ mybatis:
   mapper-locations: sql-mapper/**/*.xml
   configuration:
     map-underscore-to-camel-case: true
+
+management:
+  endpoint:
+    health:
+      show-details: always
+    metrics:
+      enabled: true
+      cache:
+        time-to-live: 1s
