--- a/mvc/build.gradle
+++ b/mvc/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 }
 
 ext.profile = (!project.hasProperty('profile') || !profile) ? 'dev' : profile
+println("profile : " + profile)
 sourceSets {
     main {
         resources {
