--- a/mvc/src/main/resources/application.yml
+++ b/mvc/src/main/resources/application.yml
@@ -1,20 +1,20 @@
 server:
   port: 8080
 
-spring:
-  h2:
-    console:
-      enabled: true
-  datasource:
-    url: jdbc:h2:mem:testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
-    generate-unique-name: true
-    schema:
-      - classpath:schema.sql
-      - classpath:test.sql
-    initialization-mode: always
+#spring:
+#  h2:
+#    console:
+#      enabled: true
+#  datasource:
+#    url: jdbc:h2:mem:testdb
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password:
+#    generate-unique-name: true
+#    schema:
+#      - classpath:schema.sql
+#      - classpath:test.sql
+#    initialization-mode: always
 
 mybatis:
   mapper-locations: sql-mapper/**/*.xml
