--- a/mvc/src/main/resources/application.yml
+++ b/mvc/src/main/resources/application.yml
@@ -29,9 +29,20 @@ management:
       enabled: true
       cache:
         time-to-live: 1s
+
+########################
+# data source setting
+########################
 spring:
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://${datasources.url}
     username: ${datasources.user}
     password: ${datasources.password}
+
+########################
+# logging setting
+########################
+#logging:
+#  level: debug
+
