--- a/mvc/build.gradle
+++ b/mvc/build.gradle
@@ -33,7 +33,11 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // test lib
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testCompile('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
 }
 
 ext.profile = (!project.hasProperty('profile') || !profile) ? 'dev' : profile
