--- a/mvc/build.gradle
+++ b/mvc/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     // test lib
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testCompile('org.projectlombok:lombok')
+    testCompileOnly('org.projectlombok:lombok')
     testAnnotationProcessor('org.projectlombok:lombok')
 }
 
